# goamines

./: .gitignore  AGENTS.md  FINDINGS.md  README.md  analyze.py  build_balances.py  build_route_map.py  datasette.yaml  dupes.py  geocode.py  geocode_villages.py  headers.py  ingest.py  loc_dump.py  locations_build.py  locations_geocode.csv  metadata.yaml  pyproject.toml  qa.py  survey.py
deploy/: DEPLOY.md  goamines.service  nginx-goamines.conf  update.sh
static/: dashboard.html
