[project]
name = "goamines"
version = "0.1.0"
description = "Goa ore-transport (RTI) data: ingest permits/trips/stock into SQLite + Datasette"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasette==1.0a33",
    "datasette-cluster-map>=0.18.2",
    "datasette-plot>=0.1.0",
    "openpyxl>=3.1.5",
]
